# danmaku

shaders/: frag.glsl  vert.glsl
src/: BulletArray.cpp  BulletArray.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Player.hpp  main.cpp
src/Graphics/: Buffer.hpp  CMakeLists.txt  GLEWInit.hpp  GLFWInit.hpp  GameProgram.cpp  GameProgram.hpp  Graphics.cpp  Graphics.hpp  Handle.hpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Texture2d.cpp  Texture2d.hpp  VertexBuffer.hpp  Window.cpp  Window.hpp  initError.hpp  vertex.hpp
src/fileio/: CMakeLists.txt  image.cpp  image.hpp  stb_image.h  text.cpp  text.hpp
